--- a/src/components/get-started/appsco-tutorial-resources.html
+++ b/src/components/get-started/appsco-tutorial-resources.html
@@ -87,7 +87,7 @@
             <div class="flex-horizontal">
                 <div class="empty"></div>
                 <div>
-                    <paper-button on-tap="_nextStep">Done</paper-button>
+                    <paper-button on-tap="_nextStep">Next</paper-button>
                 </div>
             </div>
         </div>
