--- a/src/components/get-started/appsco-tutorial-card.html
+++ b/src/components/get-started/appsco-tutorial-card.html
@@ -115,6 +115,10 @@
             },
 
             _onStartAction: function(evt) {
+                var scrollElement = document.querySelector('* /deep/ app-header-layout /deep/ #contentContainer');
+                if (scrollElement) {
+                    scrollElement.scrollTop = 0;
+                }
                 this.fire('tutorial-start', {
                     tutorialId: this.tutorial.id
                 });
