DASH-3551 Get started feature fixes

--- a/src/components/get-started/appsco-tutorial-add-company-user.html
+++ b/src/components/get-started/appsco-tutorial-add-company-user.html
@@ -115,7 +115,7 @@
                 this.tutorialId = 'directory';
                 this.tutorialTitle = 'Directory';
                 this.description = 'Add company users to directory';
-                this.icon = 'icons:settings';
+                this.icon = 'icons:social:person';
                 this.readme = 'https://support.appsco.com/hc/en-gb/sections/360002084191-Users-and-licences-';
 
                 this.init();
