--- a/src/components/get-started/appsco-tutorial-provisioning.html
+++ b/src/components/get-started/appsco-tutorial-provisioning.html
@@ -163,7 +163,7 @@
                 this.tutorialId = 'provisioning';
                 this.tutorialTitle = 'Provisioning';
                 this.description = 'Add integrations with other systems';
-                this.icon = 'icons:settings';
+                this.icon = 'icons:icons:compare-arrows';
                 this.readme = 'https://support.appsco.com/hc/en-gb/sections/360002084391-Provisioning';
 
                 this.init();
