--- a/src/components/get-started/appsco-tutorial-resources.html
+++ b/src/components/get-started/appsco-tutorial-resources.html
@@ -141,7 +141,7 @@
                 this.tutorialId = 'resources';
                 this.tutorialTitle = 'Resources';
                 this.description = 'Add company applications';
-                this.icon = 'icons:settings';
+                this.icon = 'icons:list';
                 this.readme = 'https://support.appsco.com/hc/en-gb/articles/360000230491-How-to-add-resources-to-company-';
 
                 this.init();
