--- a/src/components/get-started/appsco-tutorial-share-resources.html
+++ b/src/components/get-started/appsco-tutorial-share-resources.html
@@ -151,7 +151,7 @@
                 this.tutorialId = 'share_resources';
                 this.tutorialTitle = 'Share resources';
                 this.description = 'Share resources to users';
-                this.icon = 'icons:settings';
+                this.icon = 'icons:list';
                 this.readme = 'https://support.appsco.com/hc/en-gb/articles/360000230631-How-to-share-resources-';
 
                 this.init();
